-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.15.0, Qt Creator 5.0.0-beta1
-
None
-
-
69475d37fe78d62a984e96aaa2ea2dd263bb33ff (qt-creator/tqtc-qt-creator/5.0) a88f1426c3c08e4066ef642e2aac8c803db15bb4 (qt-creator/tqtc-qt-creator/master)
When adding a new cmake build step in the build settings in the Projects mode, the new step will not show any targets.
To reproduce: create a new cmake project, go to the projects mode, add a cmake build step.
| For Gerrit Dashboard: QTCREATORBUG-25759 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 371322,2 | CMakePM: Populate targets list on add new build step | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 371439,6 | CMakePM: Populate targets list on add new build step | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |